force-app/main/default/objects/Litmos__Courses_on_Leads__c/Litmos__Courses_on_Leads__c.object-meta.xml
<CustomObject>
    <label>Courses on Leads</label>
    <nameField>
        <label>Courses on Leads Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Courses on Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>