force-app/main/default/objects/Litmos__Courses_on_Leads__c/fields/Litmos__Course__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Litmos__Program__c</referenceTo>
    <relationshipLabel>Courses on Leads</relationshipLabel>
    <relationshipName>Courses_on_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>