force-app/main/default/objects/Litmos__Courses_on_Leads__c/fields/Litmos__Lead__c.field-meta.xml
<CustomField>
    <fullName>Litmos__Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Courses on Leads</relationshipLabel>
    <relationshipName>Courses_on_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>