force-app/main/default/objects/Litmos__Courses_on_Leads__c/fields/Litmos__SourceType__c.field-meta.xml
<CustomField>
    <fullName>Litmos__SourceType__c</fullName>
    <label>SourceType</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>